# agentdiff

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  TODOS.md  action.yml  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
.superpowers/sdd/: wp3-report.md  wp4-report.md
benchmarks/: README.md  bench_attribution.py  bench_detector.py  bench_throughput.py
collector/: live.py  uploader.py
demo/: README.md  mock_provider.py  run_real_demo.py  seed_run.py  support_agent.py
demo/real/: runner.py
demo/real/.agentdiff/: config.yaml  providers.yaml  structure.yaml  test_cases.yaml
demo/real/agents/: fact_checker.py  orchestrator.py  retriever.py  summarizer.py
demo/real/prompts/: fact_checker.txt
deploy/: nginx.conf
docs/: CODEBASE.md  HANDOFF-brutalist-ui.md  METHODOLOGY.md  VIDEO.md  data-handling.md  deploy-production.md  explanation-why-behavioral.md  hosted-quickstart.md  howto-interpret-report.md  integrations.md  reference-config.md  tutorial-getting-started.md
docs/demo/: README.md  capture.mjs
docs/demo/sample-report/: agentdiff.sqlite  metadata.json  report.md
docs/recipes/: README.md  ci-troubleshooting.md  event_driven.py  limitations.md  multi_turn.py  request_response.py  scheduled.py
docs/superpowers/plans/: 2026-06-24-report-ui.md  2026-07-03-agentdiff-hosted-walking-skeleton.md  2026-07-05-brutalist-ui.md  2026-07-05-ship-readiness.md
docs/superpowers/specs/: 2026-06-24-report-ui-design.md  2026-07-03-agentdiff-hosted-pivot-design.md  2026-07-05-ship-readiness-design.md
docs/validation/: README.md
examples/research_assistant/: .env.example  README.md  run_demo.sh  runner.py  tools.py
examples/research_assistant/.agentdiff/: config.yaml  structure.yaml  test_cases.yaml
examples/research_assistant/agents/: fact_checker.py  llm.py  orchestrator.py  retriever.py  summarizer.py
frontend/: Dockerfile  cli.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.cli.config.ts  vite.config.ts
frontend/src/: App.routes.test.tsx  App.tsx  index.css  main.tsx  sample.json  sample.ts  types.ts
frontend/src/cli/: CliReport.tsx  cli-main.tsx
frontend/src/components/: AIExplainer.tsx  AgentGraph.tsx  Footer.tsx  Inspector.tsx  RequireAuth.test.tsx  RequireAuth.tsx  RunReportPanel.tsx  Shell.tsx  Toaster.tsx  TopNav.tsx  TrustBanner.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.ts  payload.ts  payloadAdapter.test.ts  payloadAdapter.ts  publicCtas.ts  utils.ts
frontend/src/pages/: DemoPage.tsx  ProjectPage.tsx  ProjectsPage.test.tsx  ProjectsPage.tsx  RunDetailPage.tsx  usePayload.test.tsx
frontend/src/sections/: Attribution.tsx  BehavioralDeltas.tsx  Overview.tsx  RunSummary.tsx  Timeline.tsx
landing/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
landing/src/: App.tsx  analytics.ts  index.css  main.tsx  vite-env.d.ts
landing/src/components/: DocsPage.tsx  Features.tsx  Footer.tsx  GraphPlate.tsx  Hero.tsx  HowItWorks.tsx  Integrations.tsx  Nav.tsx  SlackBrief.tsx
landing/src/content/: privacy.md  terms.md
landing/src/docs/: registry.ts
landing/src/lib/: useHashRoute.ts  utils.ts
server/: Dockerfile  audit.py  clerk.py  config.py  crypto.py  db.py  deps.py  drift.py  engine_runner.py  explain.py  main.py  metrics.py  models.py  notify.py  ratelimit.py  schemas.py  security.py  usage.py  worker.py
server/migrations/: env.py
server/migrations/versions/: 0c7fdcec7587_ship_readiness.py  b34c322917a3_initial_schema.py  c1a2b3d4e5f6_live_trajectories_run_kind.py  d2e3f4a5b6c7_slack_webhook_url.py  e3f4a5b6c7d8_finding_statistical_evidence.py  e8c548d962b1_audit_logs_project_id.py  f4b5c6d7e8a9_run_id_indexes.py
server/routes/: ingest.py  manage.py  reads.py  slack_oauth.py  traffic.py
src/agentdiff/: __init__.py  compare.py  config.py  dashboard.py  graph_model.py  llm_client.py  output_eval.py  report.py  report_payload.py  sampling.py  stats.py  storage.py  traffic.py  trajectory.py
src/agentdiff/attribution/: __init__.py  engine.py  explainer.py  git_diff.py  manifest.py  manifest_diff.py  reachability.py  rules.py
tests/: _sample_run.py  test_attribution.py  test_beyond_v0.py  test_capture_path.py  test_capture_warnings.py  test_cassette.py  test_ci_cli.py  test_cli.py  test_compare.py  test_config.py  test_dashboard.py  test_fastfail_runner_validation.py  test_fixtures.py  test_graph_model.py  test_http_shim.py  test_incident.py  test_init.py  test_integration_compare.py  test_llm_client.py  test_mvp_features.py  test_output_eval.py  test_production_hardening.py  test_providers.py  test_quickstart_template_message.py  test_reachability.py  test_redaction.py  test_redaction_wiring.py  test_replay_cli.py  test_report.py  test_report_payload.py  test_review_fixes.py  test_sampling.py  test_sdk_shims.py  test_stats.py  test_storage.py  test_structure_refresh.py
tests/collector/: test_live.py  test_uploader.py
tests/server/: conftest.py  test_apikey_auth.py  test_clerk_auth.py  test_compose_config.py  test_db.py  test_drift.py  test_e2e.py  test_explain.py  test_hardening.py  test_ingest.py  test_isolation.py  test_manage.py  test_models.py  test_notify_enrich.py  test_payload.py  test_reads.py  test_slack_oauth.py  test_slack_worker.py  test_traffic.py  test_usage.py  test_worker.py  test_worker_enqueue.py
(+113 files in other folders)
